--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "myfavorytefood",
+  "name": "npm-paquetes",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass ./src/sass/style.scss ./public/css/style.css",
+    "sass-w": "sass --watch ./src/sass/style.scss ./public/css/style.css"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/devjmv/myFavoryteFood.git"
+    "url": "git+https://github.com/devjmv/My_favoryte_food.git"
   },
-  "author": "javier",
+  "author": "Javier",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/devjmv/myFavoryteFood/issues"
+    "url": "https://github.com/devjmv/My_favoryte_food/issues"
   },
-  "homepage": "https://github.com/devjmv/myFavoryteFood#readme",
-  "description": ""
+  "homepage": "https://github.com/devjmv/My_favoryte_food#readme",
+  "devDependencies": {
+    "sass": "^1.77.2"
+  }
 }
